Added a cache to store the holidays for the next 2 years, which works around the slow performance of HolidayRegion class.

BUG:247912

svn path=/trunk/extragear/office/kmymoney/; revision=1163993